--- a/internal/modules/school/html/list_schools.html
+++ b/internal/modules/school/html/list_schools.html
@@ -35,7 +35,7 @@
                       ><i class="fas fa-eye"></i> Pay</a
                     >
                     {{end}}
-                    <a href="#" class="dropdown-item has-icon"
+                    <a href="/schools/edit/{{.ID}}" class="dropdown-item has-icon"
                       ><i class="far fa-edit"></i> Edit</a
                     >
                     <div class="dropdown-divider"></div>
